fix slideshow on mobile for vertical images

--- a/public/stylesheets/zOS.css
+++ b/public/stylesheets/zOS.css
@@ -994,6 +994,7 @@ a.z-manager-assign:hover span{ color:#369;}
 	.z-content-text-div{vertical-align:top; width:70% !important; max-width:100% !important; display:block; float:left;}
 
 	.zEditorHTML img{ height:auto !important; width:auto !important; max-width:50%; min-width:150px; }
+	.gv_panel img{ width: auto !important;   max-width:100%;  height: 100% !important;}
 	.zImageLeft{ height:auto !important; width:auto !important; max-width:50%; }
 	.zImageDefault{height:auto !important; width:auto !important; max-width:100% !important; }
 	.zImageRight{height:auto !important; width:auto !important; max-width:50%; }
@@ -1072,6 +1073,7 @@ a.z-manager-assign:hover span{ color:#369;}
 	.z-content-text-div{vertical-align:top; width:100% !important; max-width:100% !important;  display:block; float:left;}
 
 	.zEditorHTML img{padding-left:0px; padding-right:0px;  height:auto !important; width:auto !important; max-width:100%;  float:none !important; min-width:auto;}
+	.gv_panel img{ width: auto !important;     height: 100% !important;}
 	.zImageLeft{ margin-left:0px; margin-right:0px;  height:auto !important; width:auto !important; max-width:100%; float:none !important; }
 	.zImageDefault{float:none !important;}
 	.zImageRight{ margin-left:0px; height:auto !important; width:auto !important; max-width:100%; float:none !important; }
